--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="mydad.css">
     
   </head>
-  <body class="homepage">
+  <body class="factsaboutartists"></body>
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="Page1.html">Facts about artists</a>
