--- a/Page2.html
+++ b/Page2.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="Page1.html">Facts about artists</a>
+        <a href="Page2.html">BTS of tours</a>
+        <a href="Page3.html">Where music orginated</a>
+        <a href="page4.html">bazingaaaaaaaaaa</a>
+      </div>
+      <img
+      src="https://i.ytimg.com/vi/OmIpp5uDvxw/maxresdefault.jpg"
+      height="600px"
+      width="1100px"
+    />
 <center>
 <h1>The behind the scenes of what happens on tour</h1>
 </center>
