--- a/Page3.html
+++ b/Page3.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="Page1.html">Facts about artists</a>
+        <a href="Page2.html">BTS of tours</a>
+        <a href="Page3.html">Where music orginated</a>
+        <a href="page4.html">bazingaaaaaaaaaa</a>
+      </div>
 <center>
 <h1>The history of where music orginated from</h1>
 </center>  
