--- a/Page1.html
+++ b/Page1.html
@@ -26,7 +26,31 @@
     padding: 20px;
     border-radius: 15px;
   }
-  
+  .home .maintitle {
+    font-weight: bold;
+    padding: 10px 
+    font-size: 100px;
+    color: white;
+    text-align: center;
+  }
+
+  .topnav a:hover {
+    background-color: #d9b08c;
+    color: white;
+  }
+
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
 </center>
   
 </body>
