--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
         <li><a href="#page4.html">bazinga</a></li>
       </ul></div>
       <div class="column middle">
-       die in ahole
+        HEY BESTIEEEEEEEEEE<3
       
       </div>
       <div class="column right"></div>
