--- a/Page1.html
+++ b/Page1.html
@@ -1,27 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-  <div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="Page1.html">Facts about artists</a>
-    <a href="Page2.html">BTS of tours</a>
-    <a href="Page3.html">Where music orginated</a>
-    <a href="page4.html">bazingaaaaaaaaaa</a>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body style="background-color: #7a7270">
+    <div class="navbar">
+      <a href="Index.html">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Tours
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Page1.html">BTS of Tours</a>
+          <a href="Page2.html">Music artists touring</a>
+          <a href="Page3.html">Tickets</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Genres
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#page4.html">R&B</a>
+          <a href="#page5.html">Pop</a>
+          <a href="#page6.html">Rap</a>
+          <a href="#page7.html">Hip Hop</a>
+          <a href="#page8.html">Popular Music</a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <selection class="Tours">
+        <section class="rhino">
+          <div class="rhino-text">
+            <h1>BTS of tours</h1>
+            <p1
+              >Touring is a complex and dynamic process that requires a lot of
+              hard work, dedication and preparation. Before the touring itself
+              happens, a lot of planning and preparing goes into what will
+              happen the night of the concert. This includes booking venues,
+              organising transport, arranging accomodation, and hiring crew
+              members. This process also includes the music artists warming up
+              their vocals, going through their rehersals, fine-tuning their
+              preformances and perfecting their choregraphy. The time taken to
+              plan and prepare for a tour varies depending on the size and
+              complexity of the tour. It generally takes several months to a
+              year to plan for a large-scale international scale. One of the
+              main reasons why touring can be very exhausting for artists is to
+              do with the traveling from one city to another, often across
+              different timezones.
+
+              <div class="myImage">
+                <img
+                  src="https://c0.wallpaperflare.com/preview/945/139/735/on-set-light-behind-the-scene-production.jpg"
+                  width="600px"
+                  height="300px"
+                />
+              </div>
+              Before each performance, the artists do a soundcheck to ensure
+              that everything is and will be working properly. This involves
+              testing the sound system, checking the lighting, and adjusting any
+              technical issues. Depending on the schedule, artists will offer
+              and organise meet and greets for their fans before and after
+              performance. This gives the fans an opportunity to interact with
+              their favourite artists, take pictures and get autographs.
+              Performing infront of their fans can create a personal touch
+              because it allows performers to connect with their audience
+              emotionally. The preformances are the highlight of the tour, music
+              artists can perform for several hours each night, and the energy
+              and the excitement you get from the crowd can be exhilarating. Now
+              for performance, there's an after party that singers and song
+              writers attend to with their crew, fans and celebrities. This
+              gives everyone a chance to unwind, celebrate the concert and enjoy
+              others company. Touring can be phyiscally and mentally demanding
+              so rest and recovery is one of the biggest priorities; which
+              includes taking rests, getting enough of sleep, and eating
+              properly to ensure they stay healthy and energized throughout the
+              rest of the tour. There's a lot that goes into an artist and their
+              self-care management.
+
+              <div class="secondimage">
+                <img
+                src="https://img.freepik.com/free-photo/digital-mixing-console-sound-mixer-control-panel-closeup-audio-faders_627829-11445.jpg"
+                width="600px" height="300px> />
+              </div>
+
+              <div class="thirdimage">
+                Throughout the tours, artists tend to push their vocals to the
+                limit when performing which over a long period of time can
+                affect their vocal health
+
+                <img
+                  src="https://www.rappler.com/tachyon/r3-assets/2D217E9941354475AF527C91B09E0604/img/595E3E67EDCF49498227D35FF22ECA27/RakrakanDSCF6438Backstage.jpg"
+                  width="500px"
+                  height="300px"
+                />
+              </div>
+            </p1>
+          </div>
+        </section>
+      </selection>
+    </div>
   </body>
-
-
-<center>
-  <h1>Facts about music artists</h1>
-  <p>BAZINGAAAAAAAAAAAAAAAA</p>
-    
-  
-  
-</body>
 </html>
