--- a/Page2.html
+++ b/Page2.html
@@ -1,27 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-    <div class="topnav">
-        <a href="index.html">Home</a>
-        <a href="Page1.html">Facts about artists</a>
-        <a href="Page2.html">BTS of tours</a>
-        <a href="Page3.html">Where music orginated</a>
-        <a href="page4.html">bazingaaaaaaaaaa</a>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body style="background-color: #7a7270">
+    <div class="navbar">
+      <a href="Index.html">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Tours
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Page1.html">BTS of Tours</a>
+          <a href="Page2.html">Music artists touring</a>
+          <a href="Page3.html">Tickets</a>
+        </div>
       </div>
-      <img
-      src="https://i.ytimg.com/vi/OmIpp5uDvxw/maxresdefault.jpg"
-      height="600px"
-      width="1100px"
-    />
-<center>
-<h1>The behind the scenes of what happens on tour</h1>
-</center>
-</body>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Genres
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#page4.html">R&B</a>
+          <a href="#page5.html">Pop</a>
+          <a href="#page6.html">Rap</a>
+          <a href="#page7.html">Hip Hop</a>
+          <a href="#page8.html">Popular Music</a>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <selection class="Tickets">
+        <section class="hippo">
+          <div class="hippo-text">
+            <h1>Upcoming tours in New Zealand</h1>
+          </div>
+        </section>
+      </selection>
+      <div class="artist container">
+        <p class="artist-name">P!nk</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+
+      <div class="artist container">
+        <p class="artist-name">Mitchh James</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+
+      <div class="artist container">
+        <p class="artist-name">Lizzo</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+
+      <div class="artist container">
+        <p class="artist-name">Sam Smith</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+
+      <div class="artist container">
+        <p class="artist-name">Lord</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+
+      <div class="artist container">
+        <p class="artist-name">Wu-Tang Clan & Nas</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+
+      <div class="artist container">
+        <p class="artist-name">The Ten Tenors</p>
+        <a href="#page3.html" class="button">Buy tickets</a>
+      </div>
+    </div>
+  </body>
 </html>
