--- a/page10.html
+++ b/page10.html
@@ -7,18 +7,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body style="background-color: gray">
+  <body>
     <div class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="Home">Home</a>
       <div class="dropdown">
         <button class="dropbtn">
           Tours
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="Page1.html">BTS of Tours</a>
-          <a href="Page2.html">Music artists touring</a>
-          <a href="Page3.html">Tickets</a>
+          <a href="Page1.html">Music artists touring</a>
+          <a href="Page2.html">Their experiences of touring</a>
+          <a href="Page3.html">BTS of touring</a>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">
+          Tickets
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Page4.html">idk</a>
+          <a href="Page5.html">idk</a>
         </div>
       </div>
       <div class="dropdown">
@@ -27,11 +38,11 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#page4.html">R&B</a>
-          <a href="#page5.html">Pop</a>
-          <a href="#page6.html">Rap</a>
-          <a href="#page7.html">Hip Hop</a>
-          <a href="#page8.html">Popular Music</a>
+          <a href="Page6.html">R&B</a>
+          <a href="Page7.html">Rap</a>
+          <a href="Page8.html">Pop</a>
+          <a href="Page9.html">Hip hop</a>
+          <a href="page10.html">Popular music</a>
         </div>
       </div>
     </div>
