--- a/page8.html
+++ b/page8.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body style="background-color: gray">
+  <body>
     <div class="navbar">
       <a href="Index.html">Home</a>
       <div class="dropdown">
