--- a/Index.html
+++ b/Index.html
@@ -2,21 +2,13 @@
 <html lang="en">
   <head>
     <title>Document</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="bazinga.css" />
   </head>
-  <body style="background-color: gray">
+  <body>
     <div class="navbar">
       <a href="Index.html">Home</a>
       <div class="dropdown">
-        <button class="dropbtn">
-          Tours
-          <i class="fa fa-caret-down"></i>
-        </button>
+        <button class="dropbtn">Tours</button>
         <div class="dropdown-content">
           <a href="Page1.html">BTS of Tours</a>
           <a href="Page2.html">Music artists touring</a>
@@ -24,29 +16,21 @@
         </div>
       </div>
       <div class="dropdown">
-        <button class="dropbtn">
-          Genres
-          <i class="fa fa-caret-down"></i>
-        </button>
+        <button class="dropbtn">Genres</button>
         <div class="dropdown-content">
-          <a href="#page4.html">R&B</a>
-          <a href="#page5.html">Pop</a>
-          <a href="#page6.html">Rap</a>
-          <a href="#page7.html">Hip Hop</a>
+          <a href="#page4.html">R&amp;B</a> <a href="#page5.html">Pop</a>
+          <a href="#page6.html">Rap</a> <a href="#page7.html">Hip Hop</a>
           <a href="#page8.html">Popular Music</a>
         </div>
       </div>
     </div>
-
     <div>
-      <selection class="Home">
-        <section class="hero">
-          <div class="hero-text">
-            <h1>Música</h1>
-            <p1>Where the lyrics speak to you</p1>
-          </div>
-        </section>
-      </selection>
+      <section class="hero">
+        <div class="hero-text">
+          <h1>Música</h1>
+          Where the lyrics speak to you
+        </div>
+      </section>
     </div>
   </body>
 </html>
