--- a/Page3.html
+++ b/Page3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body style="background-color: #7a7270">
+  <body>
     <div class="navbar">
       <a href="Index.html">Home</a>
       <div class="dropdown">
@@ -52,7 +52,6 @@
         class="float-image-second"
         height="610px"
         width="270px"
-        p="kmaksmdmwalsm;l"
       />
     </div>
 
