--- a/page4.html
+++ b/page4.html
@@ -26,6 +26,7 @@
           Genres
           <i class="fa fa-caret-down"></i>
         </button>
+        chubaka
         <div class="dropdown-content">
           <a href="#page4.html">R&B</a>
           <a href="#page5.html">Pop</a>
