--- a/Index.html
+++ b/Index.html
@@ -1,36 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
-    <div class="navbar">
-      <a href="Index.html">Home</a>
-      <div class="dropdown">
-        <button class="dropbtn">Tours</button>
-        <div class="dropdown-content">
-          <a href="Page1.html">BTS of Tours</a>
-          <a href="Page2.html">Music artists touring</a>
-          <a href="Page3.html">Tickets</a>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <title>Document</title>
+      <link rel="stylesheet" href="styles/style.css" />
+    </head>
+    <body>
+      <div class="navbar">
+        <a href="Index.html">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn">Tours</button>
+          <div class="dropdown-content">
+            <a href="Page1.html">BTS of Tours</a>
+            <a href="Page2.html">Music artists touring</a>
+            <a href="Page3.html">Tickets</a>
+          </div>
+        </div>
+        <div class="dropdown2">
+          <button class="dropbtn">Genres</button>
+          <div class="dropdown-content">
+            <a href="#page4.html">R&B 
+            <a href="#page5.html">Pop</a>
+            <a href="#page6.html">Rap</a> 
+            <a href="#page7.html">Hip Hop</a>
+            <a href="#page8.html">Popular Music</a>
+          </div>
         </div>
       </div>
-      <div class="dropdown">
-        <button class="dropbtn">Genres</button>
-        <div class="dropdown-content">
-          <a href="#page4.html">R&amp;B</a> <a href="#page5.html">Pop</a>
-          <a href="#page6.html">Rap</a> <a href="#page7.html">Hip Hop</a>
-          <a href="#page8.html">Popular Music</a>
-        </div>
+      <div>
+        <section class="hero">
+          <div class="hero-text">
+            <h1>Música</h1>
+            Where the lyrics speak to you
+          </div>
+        </section>
       </div>
-    </div>
-    <div>
-      <section class="hero">
-        <div class="hero-text">
-          <h1>Música</h1>
-          Where the lyrics speak to you
-        </div>
-      </section>
-    </div>
-  </body>
-</html>
+    </body>
+  </html>
