idfk wat to call this

--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,8 @@
       <div>
         <section class="hero">
           <div class="hero-text">
-            <h1>Música</h1>
-            Where the lyrics speak to you
+            <h1 class="heading">Música</h1>
+            <p class="subheading">Where the lyrics speak to you</p>
           </div>
         </section>
       </div>
