--- a/Index.html
+++ b/Index.html
@@ -1,38 +1,44 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <title>Document</title>
-      <link rel="stylesheet" href="styles/style.css" />
-    </head>
-    <body>
-      <div class="navbar">
-        <a href="Index.html">Home</a>
-        <div class="dropdown">
-          <button class="dropbtn">Tours</button>
-          <div class="dropdown-content">
-            <a href="Page1.html">BTS of Tours</a>
-            <a href="Page2.html">Music artists touring</a>
-            <a href="Page3.html">Tickets</a>
-          </div>
-        </div>
-        <div class="dropdown2">
-          <button class="dropbtn">Genres</button>
-          <div class="dropdown-content">
-            <a href="#page4.html">R&B 
-            <a href="#page5.html">Pop</a>
-            <a href="#page6.html">Rap</a> 
-            <a href="#page7.html">Hip Hop</a>
-            <a href="#page8.html">Popular Music</a>
-          </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Tours
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="Page1.html">BTS of tours</a>
+          <a href="Page2.html">Music artists touring</a>
         </div>
       </div>
-      <div>
-        <section class="hero">
-          <div class="hero-text">
-            <h1 class="heading">Música</h1>
-            <p class="subheading">Where the lyrics speak to you</p>
-          </div>
-        </section>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Genres
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="page3.html">R&B</a>
+          <a href="page4.html">Pop</a>
+          <a href="page5.html">Rap</a>
+          <a href="page6.html">Hip Hop</a>
+          <a href="page7.html">Popular Music</a>
+        </div>
       </div>
-    </body>
-  </html>
+    </div>
+
+    <div>
+      <section class="hero">
+        <div class="hero-text">
+          <h1 class="heading">Música</h1>
+          <p class="subheading">Where the lyrics speak to you</p>
+        </div>
+      </section>
+    </div>
+  </body>
+</html>
