--- a/Page2.html
+++ b/Page2.html
@@ -7,18 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
+  <body style="background-color: grey">
     <div class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
         <button class="dropbtn">
           Tours
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="Page1.html">BTS of Tours</a>
+          <a href="Page1.html">BTS of tours</a>
           <a href="Page2.html">Music artists touring</a>
-          <a href="Page3.html">Tickets</a>
         </div>
       </div>
       <div class="dropdown">
@@ -27,30 +26,29 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#page4.html">R&B</a>
-          <a href="#page5.html">Pop</a>
-          <a href="#page6.html">Rap</a>
-          <a href="#page7.html">Hip Hop</a>
-          <a href="#page8.html">Popular Music</a>
+          <a href="page3.html">R&B</a>
+          <a href="page4.html">Pop</a>
+          <a href="page5.html">Rap</a>
+          <a href="page6.html">Hip Hop</a>
+          <a href="page7.html">Popular Music</a>
         </div>
       </div>
     </div>
 
     <div>
-      <selection class="Tickets">
-        <section class="hippo">
-          <div class="hippo-text">
-            <h1>Upcoming tours in New Zealand</h1>
-          </div>
-        </section>
-      </selection>
+      <section class="tickets">
+        <div class="tickets-text">
+          <h1>Upcoming tours in New Zealand</h1>
+        </div>
+      </section>
+
       <div class="artist container">
         <p class="artist-name">P!nk</p>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
 
       <div class="artist container">
-        <p class="artist-name">Mitchh James</p>
+        <p class="artist-name">Mitch James</p>
         <a href="#page3.html" class="button">Buy tickets</a>
       </div>
 
