--- a/page4.html
+++ b/page4.html
@@ -9,16 +9,15 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="Index.html">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
         <button class="dropbtn">
           Tours
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="Page1.html">BTS of Tours</a>
+          <a href="Page1.html">BTS of tours</a>
           <a href="Page2.html">Music artists touring</a>
-          <a href="Page3.html">Tickets</a>
         </div>
       </div>
       <div class="dropdown">
@@ -26,13 +25,12 @@
           Genres
           <i class="fa fa-caret-down"></i>
         </button>
-        chubaka
         <div class="dropdown-content">
-          <a href="#page4.html">R&B</a>
-          <a href="#page5.html">Pop</a>
-          <a href="#page6.html">Rap</a>
-          <a href="#page7.html">Hip Hop</a>
-          <a href="#page8.html">Popular Music</a>
+          <a href="page3.html">R&B</a>
+          <a href="page4.html">Pop</a>
+          <a href="page5.html">Rap</a>
+          <a href="page6.html">Hip Hop</a>
+          <a href="page7.html">Popular Music</a>
         </div>
       </div>
     </div>
