--- a/Page2.html
+++ b/Page2.html
@@ -20,18 +20,12 @@
           <a href="Page2.html">Music artists touring</a>
         </div>
       </div>
-      <div class="dropdown">
-        <button class="dropbtn">
-          Genres
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="page3.html">R&B</a>
-          <a href="page4.html">Pop</a>
-          <a href="page5.html">Rap</a>
-          <a href="page6.html">Hip Hop</a>
-          <a href="page7.html">Popular Music</a>
-        </div>
+      <button class="dropbtn">
+        Music
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="page3.html">Genres</a>
       </div>
     </div>
 
