--- a/page8.html
+++ b/page8.html
@@ -22,15 +22,11 @@
       </div>
       <div class="dropdown">
         <button class="dropbtn">
-          Genres
+          Music
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="page3.html">R&B</a>
-          <a href="page4.html">Pop</a>
-          <a href="page5.html">Rap</a>
-          <a href="page6.html">Hip Hop</a>
-          <a href="page7.html">Popular Music</a>
+          <a href="page3.html">Genres</a>
         </div>
       </div>
     </div>
