--- a/Page2.html
+++ b/Page2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body style="background-color: grey">
+  <body></body>
     <div class="navbar">
       <a href="index.html">Home</a>
       <div class="dropdown">
@@ -20,12 +20,14 @@
           <a href="Page2.html">Music artists touring</a>
         </div>
       </div>
-      <button class="dropbtn">
-        Music
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="page3.html">Genres</a>
+      <div class="dropdown">
+        <button class="dropbtn">
+          Music
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="page3.html">Genres</a>
+        </div>
       </div>
     </div>
 
